# llm-harnesses-benchmark

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  environment.yaml
results/claude-deepseek_v4_flash_ollama_cloud/project/: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
results/claude-deepseek_v4_flash_ollama_cloud/project/chat/: consumers.py
results/claude-deepseek_v4_flash_ollama_cloud/project/chat/services/: llm.py
results/claude-deepseek_v4_flash_ollama_cloud/project/chat/templates/chat/: base.html
results/claude-deepseek_v4_flash_ollama_cloud/project/chat/tests/: test_consumers.py  test_llm.py
results/claude-deepseek_v4_flash_ollama_cloud/project/config/: asgi.py
results/claude-deepseek_v4_flash_ollama_cloud/project/static/css/: output.css
results/claude-kimi_k2_6_ollama_cloud/project/: README.md  VERIFY.md  docker-compose.yml  pyproject.toml  requirements.txt
results/claude-kimi_k2_6_ollama_cloud/project/chat/: services.py  urls.py  views.py
results/claude-kimi_k2_6_ollama_cloud/project/chat/static/css/: tailwind.css
results/claude-kimi_k2_6_ollama_cloud/project/chat/templates/chat/: index.html  message_list.html
results/claude-kimi_k2_6_ollama_cloud/project/chat_project/: asgi.py  settings.py
results/codex-codex_gpt_5_5/project/: .dockerignore  .env.example  Dockerfile  Makefile  VERIFY.md  pyproject.toml
results/codex-codex_gpt_5_5/project/chat/: config.py  tests.py  views.py
results/codex-codex_gpt_5_5/project/chat/templates/chat/: base.html
results/codex-codex_gpt_5_5/project/chatstream/: settings.py  test_settings.py  wsgi.py
results/codex-codex_gpt_5_5/project/tests/: __init__.py  fakes.py  test_consumers.py  test_llm.py
results/codex-deepseek_v4_flash_ollama_cloud/project/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
results/codex-deepseek_v4_flash_ollama_cloud/project/chat/: views.py
results/codex-deepseek_v4_flash_ollama_cloud/project/chat/tests/: test_consumer.py
results/codex-deepseek_v4_flash_ollama_cloud/project/chat_project/: settings.py  urls.py
results/codex-deepseek_v4_pro_ollama_cloud/project/: .dockerignore  .env.example  Dockerfile  README.md  VERIFY.md  docker-compose.yml  pyproject.toml  requirements.txt
results/codex-deepseek_v4_pro_ollama_cloud/project/chat/: consumers.py  routing.py  services.py  views.py
results/codex-deepseek_v4_pro_ollama_cloud/project/static/css/: output.css
results/codex-deepseek_v4_pro_ollama_cloud/project/tests/: conftest.py  test_consumer.py  test_services.py  test_views.py
results/codex-glm_5_1_ollama_cloud/project/: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
results/codex-glm_5_1_ollama_cloud/project/chat/: admin.py  consumers.py  routing.py
results/codex-glm_5_1_ollama_cloud/project/chat/services/: __init__.py
results/codex-glm_5_1_ollama_cloud/project/config/: asgi.py  settings.py  urls.py
results/codex-glm_5_1_ollama_cloud/project/templates/chat/: index.html
results/codex-glm_5_1_ollama_cloud/project/tests/: conftest.py  test_consumer.py  test_templates.py
results/codex-kimi_k2_6_ollama_cloud/project/: Dockerfile  README.md  daphne.pid  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
results/codex-kimi_k2_6_ollama_cloud/project/chat/: consumers.py  services.py  urls.py  views.py
results/codex-kimi_k2_6_ollama_cloud/project/chat/templates/chat/: base.html
results/codex-kimi_k2_6_ollama_cloud/project/chatapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/codex-kimi_k2_6_ollama_cloud/project/config/: settings.py
results/codex-kimi_k2_6_ollama_cloud/project/tests/: test_consumers.py  test_services.py  test_templates.py
results/codex-minimax_m2_7_ollama_cloud/project/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
results/codex-minimax_m2_7_ollama_cloud/project/chat/: consumers.py  urls.py
results/codex-minimax_m2_7_ollama_cloud/project/chat/services/: __init__.py  llm.py
results/codex-minimax_m2_7_ollama_cloud/project/chat_project.egg-info/: SOURCES.txt
results/codex-minimax_m2_7_ollama_cloud/project/templates/: base.html
results/codex-minimax_m2_7_ollama_cloud/project/templates/chat/: home.html
results/codex-minimax_m2_7_ollama_cloud/project/templates/chat/partials/: message_assistant.html  message_user.html
results/codex-minimax_m2_7_ollama_cloud/project/tests/: conftest.py  test_chat_consumer.py
results/run_01/projects/claude-claude_opus_4_7/project/: .dockerignore  .env.example  .gitignore  VERIFY.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
results/run_01/projects/claude-claude_opus_4_7/project/chat/: consumers.py  routing.py  services.py
results/run_01/projects/claude-claude_opus_4_7/project/config/: asgi.py  settings.py
results/run_01/projects/claude-claude_opus_4_7/project/tests/: conftest.py  fakes.py  test_consumer.py  test_services.py  test_views.py
results/run_01/projects/claude-deepseek_v4_pro_ollama_cloud/project/: .gitignore  Dockerfile  README.md  VERIFY.md  docker-compose.yml  pyproject.toml
results/run_01/projects/claude-deepseek_v4_pro_ollama_cloud/project/chat/: llm_service.py  tests.py  views.py
results/run_01/projects/claude-deepseek_v4_pro_ollama_cloud/project/config/: asgi.py
results/run_01/projects/cursor-composer_2_0/project/: .gitignore  VERIFY.md  package.json  pyproject.toml  tailwind.config.js
results/run_01/projects/cursor-composer_2_0/project/chat/: consumers.py  llm_service.py  models.py
results/run_01/projects/cursor-composer_2_0/project/chat_project/: wsgi.py
results/run_01/projects/cursor-composer_2_5/project/: .gitignore  package-lock.json  pyproject.toml
results/run_01/projects/cursor-composer_2_5/project/chat/: consumers.py  routing.py
results/run_01/projects/cursor-composer_2_5/project/tests/: conftest.py  fakes.py
results/run_01/projects/opencode-kimi_k2_6_ollama_cloud/project/: .env.example  docker-compose.yml  mypy.ini  pyproject.toml
(+1002 files in other folders)
