[project]
name = "chat-app"
version = "0.1.0"
description = "Django Channels chat SPA with Ollama"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["chat.tests.*"]
ignore_errors = true

[tool.bandit]
exclude = ["tests", ".venv"]
skips = ["B101", "B311"]

[tool.coverage.run]
source = ["chat", "config"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
testpaths = ["chat/tests"]
filterwarnings = ["ignore::pytest.PytestUnraisableExceptionWarning"]
