[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_project"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "chat_project.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "chat_project.settings"
testpaths = ["chat/tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["chat"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.bandit]
exclude_dirs = ["venv", ".git", "migrations", "tests"]
skips = []
