[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-django-chat"
version = "0.1.0"
description = "Django Channels chat UI streaming Ollama tokens through LangChain."
requires-python = "==3.13.13"
dependencies = [
    "Django==6.0.5",
    "channels==4.3.2",
    "daphne==4.2.1",
    "langchain-ollama==1.1.0",
]

[project.optional-dependencies]
dev = [
    "bandit==1.9.4",
    "coverage==7.14.0",
    "django-stubs==6.0.5",
    "mypy==2.1.0",
    "pip-audit==2.10.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-django==4.12.0",
    "ruff==0.15.14",
]

[tool.setuptools.packages.find]
include = ["chat*", "chatstream*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "chatstream.test_settings"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["chat", "chatstream"]
omit = ["*/migrations/*", "manage.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "node_modules"]

[tool.ruff.lint]
select = ["ASYNC", "B", "C4", "DJ", "E", "F", "I", "SIM", "UP"]
ignore = ["DJ008"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011"]
"chatstream/test_settings.py" = ["F403"]

[tool.mypy]
python_version = "3.13"
files = ["chat"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = [
    "channels.*",
    "daphne.*",
    "langchain_core.*",
    "langchain_ollama.*",
]
ignore_missing_imports = true
