[project]
name = "chat_project"
version = "0.1.0"
description = "Django Channels chat app with Ollama LLM"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0",
    "channels>=4.0",
    "daphne>=4.0",
    "langchain-ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "coverage>=7.0.0",
    "pip-audit>=2.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
exclude = [
    "migrations",
    ".venv*",
]

[tool.bandit]
exclude_dirs = ["migrations", ".venv*", "tests", ".venv13"]
tests = ["B101", "B301", "B303"]

[tool.coverage.run]
source = ["chat", "chat_project"]
omit = ["*/migrations/*", "*/tests/*", ".venv*"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "chat_project.settings"
testpaths = ["chat/tests"]
asyncio_mode = "auto"
