[project]
name = "chat"
version = "0.1.0"
description = "Django + Channels chat with Ollama streaming"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-django>=4.12,<5.0",
    "pytest-asyncio>=1.3,<2.0",
    "ruff>=0.15,<1.0",
    "mypy>=2.1,<3.0",
    "bandit>=1.9,<2.0",
    "coverage>=7.14,<8.0",
    "pip-audit>=2.10,<3.0",
    "django-stubs>=6.0,<7.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.bandit]
exclude_dirs = [".venv", "static", "staticfiles", "tests"]

[tool.coverage.run]
source = ["."]
omit = [".venv/*", "tests/*", "config/wsgi.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
