[project]
name = "chat"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "channels>=4.0",
    "daphne>=4.0",
    "langchain-ollama>=1.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = [".venv/", "migrations/"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["channels.*", "daphne.*", "langchain_ollama.*", "langchain_core.*", "httpx.*", "django.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.coverage.run]
source = ["chat", "config"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
