[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-project"
version = "0.1.0"
description = "Django + Channels chat app with Ollama streaming"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "channels>=4.0",
    "daphne>=4.0",
    "langchain-ollama>=0.3",
    "asgiref>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.8",
    "coverage>=7.0",
    "pytest>=9.0",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.26",
    "httpx>=0.28",
]

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_ollama.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "channels.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "daphne.*"
ignore_missing_imports = true

[tool.bandit]
targets = ["chat", "chat_project"]
skip = ["tests", "venv", "node_modules", "staticfiles"]

[tool.coverage.run]
branch = true
source = ["chat", "chat_project"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "chat_project.settings"
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
packages = ["chat", "chat_project"]
